--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,6 +15,7 @@
     "pixi.js": "^8.0.0"
   },
   "devDependencies": {
+    "terser": "^5.44.0",
     "vite": "^5.0.0"
   }
 }
